--- a/info.plist
+++ b/info.plist
@@ -100,7 +100,7 @@
 				<key>scriptfile</key>
 				<string></string>
 				<key>subtext</key>
-				<string>Update available: 0.2.2 → 0.2.1. Run `npm install -g alfred-tabs`</string>
+				<string>Update available: 0.2.5 → Run `npm install -g alfred-tabs-improved`</string>
 				<key>title</key>
 				<string>Find/Activate/Close browser tabs.</string>
 				<key>type</key>
